--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sandro.venta">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,30 +13,37 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.ListOrdersActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activity.LoginActivity">
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ClientsActivity" />
+        <activity android:name=".activity.ClientsActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".activity.NewOrderActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".activity.SyncActivity" />
-        <activity android:name=".activity.NewClientActivity" />
-        <activity android:name=".activity.ViewClientActivity" />
-        <activity android:name=".activity.ProductsActivity" />
-        <activity android:name=".activity.AddProductActivity" />
-        <activity android:name=".activity.SelectClientActivity"></activity>
-        <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-             App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+        <activity android:name=".activity.SyncActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.NewClientActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.ViewClientActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.ProductsActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.AddProductActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.SelectClientActivity"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
