--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sandro.venta">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,37 +13,44 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.ListOrdersActivity"
-            android:screenOrientation="portrait"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:screenOrientation="portrait"
-            android:name=".activity.LoginActivity">
+            android:name=".activity.LoginActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ClientsActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.ClientsActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.NewOrderActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".activity.SyncActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity.NewClientActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity.ViewClientActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity.ProductsActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity.AddProductActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity.SelectClientActivity"
-            android:screenOrientation="portrait"/>
-
+        <activity
+            android:name=".activity.SyncActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.NewClientActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.ViewClientActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.ProductsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.AddProductActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.SelectClientActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.ViewOrderDetailActivity"></activity>
     </application>
 
 </manifest>
