--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
+/.idea/caches/gradle_models.ser
+/.idea/*
+.idea/*
+/.idea/caches/build_file_checksums.ser
 .DS_Store
 /build
 /captures
+gradle
