--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,13 +17,30 @@ android {
     }
 }
 
+ext {
+    androidVersion = "28.0.0"
+    retrofitVersion = '2.4.0'
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    //android suport library
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
+    implementation "com.android.support:appcompat-v7:$androidVersion"
+    implementation "com.android.support:design:$androidVersion"
+    implementation "com.android.support:recyclerview-v7:$androidVersion"
+    implementation "com.android.support:cardview-v7:$androidVersion"
+
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-jackson:$retrofitVersion"
+
     implementation 'org.apache.commons:commons-lang3:3.0'
+
+    //butterknife
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
     testImplementation 'junit:junit:4.12'
 }
