chore: Improve performance at build gradle project

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,8 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Fri Nov 06 10:33:32 COT 2015
+android.enableD8=true
+org.gradle.daemon=true
+org.gradle.paralell=true
+org.gradle.configureondemand=true
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
