--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ ext {
     retrofitVersion = '2.4.0'
     rxJavaVersion = '2.0.1'
     butterKnifeVersion = '8.8.1'
+    //gmsPlayServices = '15.0.1'
 }
 
 dependencies {
@@ -38,6 +39,12 @@ dependencies {
     implementation "com.android.support:design:$androidVersion"
     implementation "com.android.support:recyclerview-v7:$androidVersion"
     implementation "com.android.support:cardview-v7:$androidVersion"
+    implementation "com.android.support:animated-vector-drawable:$androidVersion"
+    implementation "com.android.support:support-media-compat:$androidVersion"
+    implementation "com.android.support:support-v4:$androidVersion"
+
+    //gps
+    //implementation "com.google.android.gms:play-services-location:$gmsPlayServices"
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
@@ -53,6 +60,9 @@ dependencies {
     //butterknife
     implementation "com.jakewharton:butterknife:$butterKnifeVersion"
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
+
+    //utils
+    implementation 'com.facebook.shimmer:shimmer:0.4.0'
 
     testImplementation 'junit:junit:4.12'
 }
